--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,22 @@
 Backend:
-    -Banner images havent been added to the database for some reason. IDK if they will ever be used so low Priority fix.
     -Also need to get the english title.
     -tags need to be replaced with generes
     -fetch character portraits.
     -recommendations are duplicted multiple times for some reason
     -when i get related also get pictures for them
     -make it so the data get updated from anilist every week and build the database on the fly and swap to that instance and delete old, this requires a dual databse
+    -new and trending
+    -banner images
 Frontend:
-    -When you return back from details page to search page the css styling is fucked, prolly because its trying to use details_page.css for some odd reason
+    -kinda fixed the css problem but i need to make sure every id and class name are distinct
     -if name is too long do ... the causes the image cards to become too big in the search page 
     -Friends is gonna have 5 items max and the rest needs to have its own Friends page
     -Clicking on a friend liking it should also take them to a different page with when they added ect and their other likes/watches
     -trash can image is not the right image
     -plus icon needs to be replaced
-
+    -rename details page css names 
+    -add a showing results for on search page
+    -fix the load_times for images somehow.
 prod:
     -https certificate
     -
