--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,6 @@ Backend:
     -tags need to be replaced with generes
     -fetch character portraits.
     -recommendations are duplicted multiple times for some reason
-    -when i get related also get pictures for them
     -make it so the data get updated from anilist every week and build the database on the fly and swap to that instance and delete old, this requires a dual databse
     -new and trending
     -banner images
@@ -12,11 +11,12 @@ Frontend:
     -if name is too long do ... the causes the image cards to become too big in the search page 
     -Friends is gonna have 5 items max and the rest needs to have its own Friends page
     -Clicking on a friend liking it should also take them to a different page with when they added ect and their other likes/watches
-    -trash can image is not the right image
-    -plus icon needs to be replaced
-    -rename details page css names 
-    -add a showing results for on search page
+    -trash can image is not the right image.
+    -plus icon needs to be replaced.
+    -rename details page css names.
+    -add a showing results for on search page.
     -fix the load_times for images somehow.
+    -fix pfp.
 prod:
     -https certificate
     -
