--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ Backend:
     -voice actors need to be incorporated
     -change it to large pictures 
     -add tag percentages
+    -id might not be safe enough look at using username for hashing
 Frontend:
     -kinda fixed the css problem but i need to make sure every id and class name are distinct
     -if name is too long do ... the causes the image cards to become too big in the search page 
